# sdlretro

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: mips32-linux-gcc.cmake
lang/: en-US.json  zh-CN.json
opk/: default.gcw0.desktop  make_opk.sh
src/: CMakeLists.txt  main.cpp  version.h
src/drivers/: CMakeLists.txt
src/drivers/common/: CMakeLists.txt  audio_base.cpp  buffered_audio.cpp  cfg.cpp  core_manager.cpp  driver_base.cpp  i18n.cpp  input.cpp  input_base.cpp  logger.cpp  logger.h  menu_base.cpp  throttle.cpp  ttf_font.cpp  ttf_font_base.cpp  util.cpp  video_base.cpp
src/drivers/common/include/: audio_base.h  buffered_audio.h  cfg.h  circular_buffer.h  core_manager.h  driver_base.h  i18n.h  input.h  input_base.h  logger.h  menu_base.h  throttle.h  ttf_font.h  ttf_font_base.h  util.h  video_base.h
src/drivers/sdl1/: CMakeLists.txt  bmfont.inl  circular_buffer.h  sdl1_audio.cpp  sdl1_audio.h  sdl1_font.cpp  sdl1_font.h  sdl1_impl.cpp  sdl1_input.cpp  sdl1_input.h  sdl1_menu.cpp  sdl1_menu.h  sdl1_ttf.cpp  sdl1_ttf.h  sdl1_video.cpp  sdl1_video.h
src/drivers/sdl1/include/: sdl1_impl.h  sdl1_menu.h  sdl1_video.h
src/drivers/sdl2/: CMakeLists.txt  sdl2_audio.cpp  sdl2_audio.h  sdl2_impl.cpp  sdl2_input.cpp  sdl2_input.h  sdl2_ttf.cpp  sdl2_ttf.h  sdl2_ttf_ogl.cpp  sdl2_ttf_ogl.h  sdl2_video.cpp  sdl2_video.h  sdl2_video_ogl.cpp  sdl2_video_ogl.h
src/drivers/sdl2/include/: sdl2_impl.h
src/gui/: CMakeLists.txt  elem_base.cpp  elem_base.h  gui_base.h  menu_base.cpp  menu_base.h  sdl_elem.cpp  sdl_elem.h  sdl_menu.cpp  sdl_menu.h  ui_host.cpp  ui_menu.cpp
src/gui/common/: CMakeLists.txt  menu_base.cpp
src/gui/common/include/: menu_base.h
src/gui/include/: ui_host.h  ui_menu.h
src/gui/sdl1/: CMakeLists.txt  sdl1_menu.cpp  ui_menu.cpp
src/gui/sdl1/include/: sdl1_menu.h  ui_menu.h
src/libretro/: CMakeLists.txt  cfg.cpp  core.c  core_manager.cpp  dlfcn_compat.h  downloader.cpp  helper.cpp  i18n.cpp  perf.cpp  util.cpp  variables.cpp  vfs_unix.cpp  vfs_win32.cpp
src/libretro/include/: cfg.h  core.h  core_manager.h  downloader.h  helper.h  i18n.h  perf.h  util.h  variables.h
src/tools/: i18n_gen.py
src/util/: CMakeLists.txt  logger.cpp
src/util/include/: logger.h
